Minor changes related to Login and Logout

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div id="About" class="container">
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-sm-12">
         <h2>G3 Project's</h2><br>
         <h3><b><i>Getting Bored ??</i></b></h3><br>
         <p>Are you getting bored, come let's utilize your precious time in our website. We
@@ -19,12 +19,15 @@
 <div class="container bg-grey">
     <div class="row">
       
-      <div class="col-sm-5">
-        <h2>Our Values</h2><br>
-        <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-        <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="col-sm-12">
+        <h2 class="text-center">Our Values</h2><br>
+        <h4><strong>MISSION:</strong> <br>Our mission is to make you bore free. This website is specially designed to make you relax from your daily routine work. </h4><br>
+        <p><strong>VISION:</strong> <br>Our vision is to Keep the customer at the center of all we do.
+          Operating assets and executing projects at benchmark level through technology & innovation.
+          Sustainable growth with a focus on profitability and market leadership.
+          Creating an empowered workforce driven by passion & purpose.
+          'Leadership with Care' for all stakeholders.</p>
       </div>
     </div>
   </div>
-  
+  <app-ourteam></app-ourteam>
