--- a/src/app/ourteam/ourteam.component.html
+++ b/src/app/ourteam/ourteam.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
-<header class="bg-primary text-center py-5 mb-4">
+<header class="bg-danger text-center py-5 mb-4">
     <div class="container">
-      <h1 class="font-weight-light text-white">Meet the Team</h1>
+      <h1 class="font-weight-light text-black">Meet the Team</h1>
     </div>
   </header>
   
@@ -52,29 +52,29 @@
     <!-- /.row -->
 
     <!-- Team Member 5 -->
-      
     <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card border-0 shadow">
-          <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFkKxznKGNzxQ/profile-displayphoto-shrink_200_200/0/1529316995064?e=1613001600&v=beta&t=RTvLpJYJ3m8-6Y1JBGW22ZdOYBnNdpmePLeXheGH-HM" class="card-img-top" alt="...">
-          <div class="card-body text-center">
-            <h5 class="card-title mb-0">Prajakta Bhamre</h5>
-            <div class="card-text text-black-50">Web Developer</div>
-          </div>
+      <div class="card border-0 shadow">
+        <img src="https://media-exp1.licdn.com/dms/image/C5103AQFBUvmhKQdWwQ/profile-displayphoto-shrink_200_200/0/1550945413581?e=1613001600&v=beta&t=DJUkrilkGbCRTHS4aQ5vBlsH7hyqDSObCkNCk7-dWa8" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <h5 class="card-title mb-0">Rupali Patil</h5>
+          <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
+    </div>
+   
     <!-- /.row -->
 
     <!-- Team Member 6 -->
-      
     <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card border-0 shadow">
-          <img src="https://media-exp1.licdn.com/dms/image/C5103AQFBUvmhKQdWwQ/profile-displayphoto-shrink_200_200/0/1550945413581?e=1613001600&v=beta&t=DJUkrilkGbCRTHS4aQ5vBlsH7hyqDSObCkNCk7-dWa8" class="card-img-top" alt="...">
-          <div class="card-body text-center">
-            <h5 class="card-title mb-0">Rupali Patil</h5>
-            <div class="card-text text-black-50">Web Developer</div>
-          </div>
+      <div class="card border-0 shadow">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFkKxznKGNzxQ/profile-displayphoto-shrink_200_200/0/1529316995064?e=1613001600&v=beta&t=RTvLpJYJ3m8-6Y1JBGW22ZdOYBnNdpmePLeXheGH-HM" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <h5 class="card-title mb-0">Prajakta Bhamre</h5>
+          <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
+    </div>
+   
     <!-- /.row -->
 
     <!-- Team Member 7 -->
