--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -14,7 +14,12 @@
                                 <input formControlName="fullName" class="form-control" placeholder="Enter your Full Name" maxlength="15"/>
                                 <small class="error" *ngIf="f.fullName.invalid && (f.fullName.dirty || f.fullName.touched)">
                                     <div *ngIf="f.fullName.hasError('required')">This field is required.</div>
+                                    <div *ngIf="f.password.errors.minlength">Name Should be atleast of 4 character.</div>
                                 </small>
+                                <span class="form-group text-centre" style="color:tomato">
+                                    {{msg}}
+                                  </span>
+
                             </div>
                         </div>
                     </div>
@@ -29,11 +34,15 @@
                                     <div *ngIf="f.email.hasError('required')">This field is required.</div>
                                     <div *ngIf="f.email.hasError('email')">Enter valid email address.</div>
                                 </small>
+                                
                             </div>
                         </div>
                     </div>
                    
-
+                    <!-- ng-pattern="/^(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,20}$/"
+                     <div style="color:orange" ng-show="!signupForm.userPassword.$valid">Password should be at least 8 characters
+                                        long and should contain one number,one character and one special
+                                        character</div> -->
 
                     <div class="form-group">
                         <div class="form-row">
@@ -41,10 +50,17 @@
                                 <label>Password <span class="error">*</span></label>
                             </div>
                             <div class="col-md-8">
-                                <input formControlName="password" type="password" class="form-control" placeholder="Enter the password"/>
+                                <input formControlName="password" type="password" name="userPassword" class="form-control" placeholder="Enter the password"/>
                                 <small class="error alert-danger" *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)">
                                     <div *ngIf="f.password.hasError('required')">This field is required.</div>
-                                    <div *ngIf="f.password.hasError('minlength')">Password must be at least 6 characters.</div>
+                                   
+                                    <div *ngIf="f.password.invalid">
+                                        Password should be at least 8 characters long <br>
+                                        one Alphabet character <br>
+                                        one Numerical value and<br>
+                                        one special character.
+                                    </div>
+                                   
                                 </small>
                             </div>
                         </div>
