--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -19,19 +19,15 @@ a:hover {
 }
 
 footer {
+  position: absolute;
+  bottom : 0; 
+  width: 100%;
   padding: 2rem 0;
   background-color: #212529;
-  // .container .row:not(:last-child) {
-  //   padding-bottom: 2rem;
-  // }
+  
+ 
 }
 
-// .footer-column:not(:first-child) {
-//     padding-top: 2rem;
-//     @media (min-width: 768px) {
-//       padding-top: 0rem;
-//     }
-//   }
 
 .footer-column {
   text-align: center;
