--- a/src/app/update-password/update-password.component.html
+++ b/src/app/update-password/update-password.component.html
@@ -28,7 +28,12 @@
               <input formControlName="password" type="password" class="form-control" placeholder="Enter the password"/>
               <small class="error alert-danger" *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)">
                   <div *ngIf="f.password.hasError('required')">This field is required.</div>
-                  <div *ngIf="f.password.hasError('minlength')">Password must be at least 6 characters.</div>
+                  <div *ngIf="f.password.invalid">
+                    Password should be at least 8 characters long 
+                   ,
+                    one Alphabet character and
+                     one special character.
+                </div>
               </small>
           </div>
       </div>
