Integration Home and Admin

--- a/src/app/components/add-questions/add-questions.component.html
+++ b/src/app/components/add-questions/add-questions.component.html
@@ -183,7 +183,8 @@
           </div>
   
           <div class="btn-group btn-group-sm">
-            <button
+            <div class="col-md-3"> 
+              <button
               type="button"
               class="btn btn-dark"
               (click)="addQuestion()"
@@ -191,8 +192,10 @@
             >
               Add
             </button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div style="text-align: center">
+            </div>
+          </div>  
+          <div class="btn-group btn-group-sm">
+            <div class="col-md-3">
               <button (click)="btnClick()" class="btn btn-dark">Exit</button>
             </div>
           </div>
