--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,4 @@
-<h4>Category List</h4>
+<!-- <h4>Category List</h4>
 <ul class="list-group">
   <li
     class="list-group-item"
@@ -6,11 +6,35 @@
     [class.active]="i == currentIndex"
     (click)="setActiveTutorial(cat, i)"
   >
-    <a routerLink="/bt/{{ cat.id }}">
+    <a routerLink="/dashboard/bt/{{ cat.id }}">
      <h4> {{ cat.category }}</h4>
     </a>
   </li>
 </ul>
 <div class="container mt-3">
   <router-outlet></router-outlet>
+</div> -->
+
+
+  <div class="row">
+    <div
+      class="col-sm-4"
+      *ngFor="let cat of categories; let i = index"
+      [class.active]="i == currentIndex"
+      (click)="setActiveTutorial(cat, i)"
+    >
+    
+    <form>
+      <div class="card">
+        <div class="card-body">
+      <a routerLink="/bt/{{ cat.id }}">
+       <h2 class="card-title"> {{ cat.category }}</h2>
+       <img class="card-img-bottom" src="/assets/images/imgae{{i}}.jpg" alt="Card image" style="width:100%">
+      </a>
+    </div>
+  </div>
+  </form>
 </div>
+ </div>
+    <router-outlet></router-outlet>
+ 
