--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -20,7 +20,7 @@ a:hover {
 
 footer {
   position: absolute;
-  bottom : 0; 
+  // bottom : 0; 
   width: 100%;
   padding: 2rem 0;
   background-color: #212529;
