--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,13 +15,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a routerLink="/categories" class="nav-link">Category</a>
+         <li class="nav-item" [hidden]='!isLogin'>
+          <a routerLink="/dashboard" class="nav-link">Dashboard</a>
         </li>
     
-        <li class="nav-item">
-          <a routerLink="/add" class="nav-link">Create quiz</a>
-        </li>
          <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/aboutUs">About Us</a>
          </li> 
