--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+// background-image:url('/assets/images/dice.jpg');
+// background-repeat: no-repeat;
+// background-size: cover;
+background-color: lightblue;
+}
