--- a/projectG3_Angl_/src/app/mcq/mcq.component.html
+++ b/projectG3_Angl_/src/app/mcq/mcq.component.html
@@ -8,6 +8,7 @@
   <!-- <button (click)="statusfun()">click</button> -->
   <!-- <a (click)="quizlist()">quiz</a> -->
   <button (click)="quizlist()">get</button>
+  <!-- <router-outlet></router-outlet> -->
  <!-- <div *ngFor="let a of ques">
   <li style="color: green;" >{{a.questions}}</li>
   
@@ -18,7 +19,7 @@
  </div> -->
  <!-- (click)="toggleSelected()" -->
   
- <div class="container">
+ <div class="container m-auto ">
   <div >
     <h2 class="fav1">Questions</h2>
     <button class="fav2" mat-icon-button (click)="toggleSelected()">
@@ -40,10 +41,13 @@
   <ul class="list-group" *ngFor="let question of ques; let i = index " >
   
     
-    <li class="list-group-item" *ngIf="question.status"  > 
+    <li class="card p-5" *ngIf="question.status"  > 
       <div >
-        <label><p type="text">{{i+1}}. {{question.questions}}</p></label>
+        <div class="card-body">
+          <div class="border p-3 m-3">
+        <label><p class="card-title h4 " type="text">{{i+1}}. {{question.questions}}</p></label>
       </div>
+      <div class="border p-3 m-3">
       <div  class="radio">
         <label><input type="radio" *ngIf="question.userAns==question.option1"  checked  value="1" name="optradio{{i}}" disabled  >{{question.option1}}</label>
       </div>
@@ -56,33 +60,39 @@
       <div  class="radio">
         <label><input type="radio" *ngIf="question.userAns==question.option4"  checked value="4" name="optradio{{i}}"  disabled>{{question.option4}}</label>
       </div>
-      
+      </div>
+      </div>
+    </div>
     </li>
-    <li class="list-group-item" *ngIf="!question.status"  style="color: blue;"> 
-      
-        <div >
-          <label><p type="text">{{i+1}}. {{question.questions}}</p></label>
+    <!-- list-group-item -->
+    <li class="card p-5" *ngIf="!question.status" > 
+      <!-- <div class="container mt-5" > -->
+        <div class="card-body">
+        <div class="border p-3 m-3">
+          <label ><p class="card-title h4 " type="text">{{i+1}}. {{question.questions}}</p></label>
         </div>
-        <div  class="radio">
-         <label id="{{question.id}}11" ><input type="radio" id="{{question.id}}1"  value="1" name="optradio{{i}}"  (click)="setAnswer(question.option1,question.id,question.answer,question)" >{{question.option1}}</label>
+        <!--   (wrong? 'incorrect':'default') -->
+        <div class="border p-3 m-3" >
+        <div  (click)="setAnswer(question.option1,question.id,question.answer,question,i)"  class="radio card-text border p-3 m-3" [ngClass]="question.userSelected? (question.option1==question.answer? 'correct':(question.wrong1? 'incorrect':'default')):'default'" >
+         <label   for="{{question.id}}1" id="{{question.id}}11"  ><input type="radio" id="{{question.id}}1" [disabled]="question.disable? true:false" [checked]="question.option1==question.selectedOption" value="1" name="optradio{{i}}"  >{{question.option1}}</label>
         </div>
-        <div  class="radio">
-          <label id="{{question.id}}22"  ><input type="radio" id="{{question.id}}2"  value="2" name="optradio{{i}}" (click)="setAnswer(question.option2,question.id,question.answer,question)" >{{question.option2}}</label>
+        <div (click)="setAnswer(question.option2,question.id,question.answer,question,i)" class="radio card-text border p-3 m-3" [ngClass]="question.userSelected? (question.option2==question.answer? 'correct':(question.wrong2? 'incorrect':'default')):'default'">
+          <label    for="{{question.id}}2" id="{{question.id}}22"  ><input type="radio" id="{{question.id}}2"  [disabled]="question.disable? true:false" [checked]="question.option2==question.selectedOption" value="2" name="optradio{{i}}"  >{{question.option2}}</label>
         </div>
-        <div  class="radio">
-          <label id="{{question.id}}33" ><input type="radio" id="{{question.id}}3"   value="3" name="optradio{{i}}" (click)="setAnswer(question.option3,question.id,question.answer,question)">{{question.option3}}</label>
+        <div (click)="setAnswer(question.option3,question.id,question.answer,question,i)" class="radio card-text border p-3 m-3" [ngClass]="question.userSelected? (question.option3==question.answer? 'correct':(question.wrong3? 'incorrect':'default')):'default'">
+          <label    for="{{question.id}}3" id="{{question.id}}33" ><input type="radio" id="{{question.id}}3"  [disabled]="question.disable? true:false" [checked]="question.option3==question.selectedOption" value="3" name="optradio{{i}}" >{{question.option3}}</label>
         </div>
-        <div  class="radio">
-          <label id="{{question.id}}44"  > <input type="radio" id="{{question.id}}4"  value="3" name="optradio{{i}}" (click)="setAnswer(question.option4,question.id,question.answer,question)">{{question.option4}}</label>
+        <div (click)="setAnswer(question.option4,question.id,question.answer,question,i)" class="radio card-text border p-3 m-3" [ngClass]="question.userSelected? (question.option4==question.answer? 'correct':(question.wrong4? 'incorrect':'default')):'default'">
+          <label    for="{{question.id}}4" id="{{question.id}}44"  > <input type="radio" id="{{question.id}}4" [disabled]="question.disable? true:false" [checked]="question.option4==question.selectedOption" value="3" name="optradio{{i}}" >{{question.option4}}</label>
         </div>
-    
-    
+      </div>
+      </div>
     </li>
   
   </ul>
 
 
-  <button [routerLink]="['/result']" type="button" class="btn btn-success"(click)="submitTest()">Submit</button>
+  <a  type="button" class="btn btn-success"(click)="submitTest()">Submit</a>
 
  
 
