games Added and minor Functionality Changes

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -27,9 +27,10 @@
     <form>
       <div class="card">
         <div class="card-body">
-      <a routerLink="/bt/{{ cat.id }}">
+      <a routerLink="/dashboard/bt/{{ cat.id }}">
        <h2 class="card-title"> {{ cat.category }}</h2>
-       <img class="card-img-bottom" src="/assets/images/imgae{{i}}.jpg" alt="Card image" style="width:100%">
+       <img class="card-img-bottom" src="/assets/images/book{{i}}.jpg" alt="Card image" style="width:100%">
+       
       </a>
     </div>
   </div>
