--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,10 +3,13 @@
 <div class="container-fluid" *ngIf="userRoleId==2">
   <div class="row content">
     <div class="col-sm-2 sidenav">
+      <img src="../../assets/images/icon.jpg" class="rounded-circle" alt="Image" width="304" height="236"> 
       <h2>Hello {{name}}</h2>
       <ul class="nav nav-pills nav-stacked">
-        <li class="text"><a class="text-uppercase" href="/dashboard/categories">Quizes</a></li>
-        <li class="text"><a class="text-uppercase" href="/dashboard/categories">Games</a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/search"><b><i>Search Quiz</i></b></a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/categories"><b> <i>Quizes</i></b></a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/games"><b><i>Games</i></b></a></li>
+        
       </ul>
 
     </div>
@@ -26,11 +29,12 @@
 <div class="container-fluid" *ngIf="userRoleId==1">
   <div class="row content">
     <div class="col-sm-2 sidenav">
+      <img src="../../assets/images/icon.jpg" class="rounded-circle" alt="Image" width="304" height="236"> 
       <h2>Hello {{name}}</h2>
       <ul class="nav nav-pills nav-stacked">
-        <li class="text"><a class="text-uppercase" href="/dashboard/categories">Category</a></li>
-        <li class="text"><a class="text-uppercase" href="/dashboard/add">Create Quiz</a></li>
-        <li class="text"><a class="text-uppercase" href="/dashboard/chart">Chart</a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/categories"><h3><b><i>Category</i></b></h3> </a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/add"><h3><b><i>Create Quiz</i></b></h3></a></li>
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/chart"><h3><b><i>Chart</i></b></h3></a></li>
       
       </ul>
 
