--- a/src/app/ourteam/ourteam.component.html
+++ b/src/app/ourteam/ourteam.component.html
@@ -54,7 +54,7 @@
     <!-- Team Member 5 -->
     <div class="col-lg-3 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="https://media-exp1.licdn.com/dms/image/C5103AQFBUvmhKQdWwQ/profile-displayphoto-shrink_200_200/0/1550945413581?e=1613001600&v=beta&t=DJUkrilkGbCRTHS4aQ5vBlsH7hyqDSObCkNCk7-dWa8" class="card-img-top" alt="...">
+        <img src="https://media-exp1.licdn.com/dms/image/C5103AQGhqS1ztds-Hw/profile-displayphoto-shrink_200_200/0/1546939290830?e=1613606400&v=beta&t=HvDJN33eH6_ZtGaPiR_vJeI9gti3tNB9si9x7WiPpl0" class="card-img-top" alt="...">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Rupali Patil</h5>
           <div class="card-text text-black-50">Web Developer</div>
@@ -83,7 +83,7 @@
         <div class="card border-0 shadow">
           <img src="https://media-exp1.licdn.com/dms/image/C5103AQFml9RwyFh5TA/profile-displayphoto-shrink_200_200/0/1542204972860?e=1613001600&v=beta&t=Srzb56Z792USBa0if67Kh6H4pKItechrdrbWf1UqBGY" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Aditya Dhapote</h5>
+            <h5 class="card-title mb-0">Aditya Dhopade</h5>
             <div class="card-text text-black-50">Web Developer</div>
           </div>
         </div>
