--- a/src/app/components/add-questions/add-questions.component.html
+++ b/src/app/components/add-questions/add-questions.component.html
@@ -5,7 +5,7 @@
       <div *ngIf="!submitted">
         <form #addQuestionForm="ngForm">
           <div class="form-group">
-            <label for="Quizname">Quizname</label>
+            <label for="Quizname"><b>Quizname</b></label>
   
             <input
               type="text"
@@ -17,7 +17,7 @@
           </div>
   
           <div class="form-group">
-            <label for="type">Type</label>
+            <label for="type"><b> Type</b> </label>
             <select name="type" class="form-control" [(ngModel)]="que.type">
               <option *ngFor="let i of type" value="{{ i.type }}">
                 {{ i.type }}
@@ -26,7 +26,7 @@
           </div>
   
           <div class="form-group">
-            <label for="question">Question </label>
+            <label for="question"><b> Question  </b></label>
             <input
               type="text"
               class="form-control"
@@ -62,7 +62,7 @@
                 value="{{ que.option1 }}"
                 name="option"
               />&nbsp;&nbsp;
-              <label for="option1">Option 1</label>
+              <label for="option1"><b> Option 1 </b></label>
               <div
                 [hidden]="option1.valid || option1.pristine"
                 class="alert alert-danger"
@@ -88,7 +88,7 @@
                 value="{{ que.option2 }}"
                 name="option"
               />&nbsp;&nbsp;
-              <label for="option2">Option 2</label>
+              <label for="option2"><b>Option 2 </b> </label>
               <div
                 [hidden]="option2.valid || option2.pristine"
                 class="alert alert-danger"
@@ -115,7 +115,7 @@
                 value="{{ que.option3 }}"
                 name="option"
               />&nbsp;&nbsp;
-              <label for="option3">Option 3</label>
+              <label for="option3"><b> Option 3 </b></label>
               <div
                 [hidden]="option3.valid || option3.pristine"
                 class="alert alert-danger"
@@ -141,7 +141,7 @@
                 value="{{ que.option4 }}"
                 name="option"
               />&nbsp;&nbsp;
-              <label for="option4">Option 4</label>
+              <label for="option4"><b> Option 4</b> </label>
               <div
                 [hidden]="option4.valid || option4.pristine"
                 class="alert alert-danger"
@@ -190,13 +190,13 @@
               (click)="addQuestion()"
               [disabled]="!addQuestionForm.form.valid"
             >
-              Add
+            <b>Add </b> 
             </button>
             </div>
           </div>  
           <div class="btn-group btn-group-sm">
             <div class="col-md-3">
-              <button (click)="btnClick()" class="btn btn-dark">Exit</button>
+              <button (click)="btnClick()" class="btn btn-dark"><b>Exit </b> </button>
             </div>
           </div>
         </form>
