--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -1,7 +1,21 @@
 img
 {
-    height: 100px;
+    height: 200px;
+    
 }
-body{
-    background-color: lightblue;
+a{ 
+    color: red;
+}
+.card:hover
+{
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
+
+}
+
+.row
+{
+    padding-top: 40px;
+    padding-left: 40px;
 }
