--- a/FET_2020_MajarProject_G3/src/app/chart/chart.component.html
+++ b/FET_2020_MajarProject_G3/src/app/chart/chart.component.html
@@ -5,12 +5,13 @@
   </canvas>
 </div>
 
+<br>
+<hr>
 
-
-<div class="container row">
+<div class="container row scoreTable">
   <div class="col-sm-4">
     <h3><i><b>General Knowledge</b></i></h3>
-    <table class="table table-striped table-inverse table-responsive ">
+    <table class="table table-striped table-inverse table-responsive table-dark ">
       <thead class="thead-inverse">
         <tr>
           <th>User Name</th>
@@ -29,7 +30,7 @@
   </div>
   <div class="col-sm-4">
     <h3><i><b>Brain Teaser</b></i></h3>
-    <table class="table table-striped table-inverse table-responsive ">
+    <table class="table table-striped table-inverse table-responsive table-dark ">
       <thead class="thead-inverse">
         <tr>
           <th>User Name</th>
@@ -48,7 +49,7 @@
   </div>
   <div class="col-sm-4">
     <h3><i><b>Logical Thinking</b></i></h3>
-    <table class="table table-striped table-inverse table-responsive ">
+    <table class="table table-striped table-inverse table-responsive table-dark ">
       <thead class="thead-inverse">
         <tr>
           <th>User Name</th>
