--- a/FET_2020_MajarProject_G3/src/app/chart/chart.component.scss
+++ b/FET_2020_MajarProject_G3/src/app/chart/chart.component.scss
@@ -1,6 +1,15 @@
 .chartblock{
     display: block;
+    canvas{
+    background-color:white;
+     opacity: 0.8;
+}
 }
 .user{
     width: 100vw;
+}
+h3{
+    background-color: white;
+    opacity: 0.8;
+  text-align: center;
 }
