--- a/FET_2020_MajarProject_G3/src/app/components/user-list/user-list.component.html
+++ b/FET_2020_MajarProject_G3/src/app/components/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <div class="container row user">
-    <table class="table table-striped table-inverse table-responsive ">
-      <thead class="thead-inverse">
+    <table class="table table-dark  ">
+      <thead>
         <tr>
           <th>User Name</th>
           <th>Quiz Name</th>
@@ -9,7 +9,7 @@
       </thead>
       <tbody >
         <tr *ngFor="let user of usersoftheDay ">
-          <td scope="row">{{user.usersc.username}}</td>
+          <td>{{user.usersc.username}}</td>
           <td>{{user.quizes.quizname}}</td>
         </tr>
 
