Games And Remaining Integration Done....

--- a/FET_2020_MajarProject_G3/src/app/components/add-questions/add-questions.component.html
+++ b/FET_2020_MajarProject_G3/src/app/components/add-questions/add-questions.component.html
@@ -44,7 +44,7 @@
               Question is required
             </div>
           </div>
-          <div *ngIf="que.type == 'mcq'">
+          <div *ngIf="que.type == 'MCQ'">
             <div class="form-group">
               <input
                 type="text"
@@ -151,7 +151,7 @@
             </div>
           </div>
   
-          <div *ngIf="que.type == 'descriptive'">
+          <div *ngIf="que.type == 'Descriptive'">
             <div class="form-group">
               <input
                 type="radio"
