--- a/FET_2020_MajarProject_G3/src/app/dashboard/dashboard.component.html
+++ b/FET_2020_MajarProject_G3/src/app/dashboard/dashboard.component.html
@@ -10,6 +10,10 @@
         <li class="text"><a class="text-uppercase" routerLink="/dashboard/categories"><b> <i>Quizes</i></b></a></li><br>
         <li class="text"><a class="text-uppercase" routerLink="/dashboard/games"><b><i>Games</i></b></a></li>
         <li class="text"><a class="text-uppercase" routerLink="/dashboard/favList"><b><i>Favourite </i></b></a></li>
+
+        <li class="text"><a class="text-uppercase" routerLink="/dashboard/History"><b><i>Quiz History </i></b></a></li>
+
+        
       </ul>
 
     </div>
