--- a/FET_2020_MajarProject_G3/src/app/components/mcq/mcq.component.html
+++ b/FET_2020_MajarProject_G3/src/app/components/mcq/mcq.component.html
@@ -1,18 +1,18 @@
 <button class="btn btn-primary" (click)="quizlist()">Start Quiz </button>
 
-<div *ngIf="maxScorer" [hidden]='!enable'>
-  <h4>MaxScorer For this Quiz is
-  <label><strong>{{ userName }}</strong>
-    
-    Highest score is :- {{ maxScorer }}
-</label>
-</h4>
+<div class="maxScore" *ngIf="maxScorer" [hidden]='!enable'>
+  <h2>MaxScorer For this Quiz is 
+    <label><strong> {{ userName }} </strong>
+      
+      scored:- {{ maxScorer }}
+  </label>
+  </h2>
 </div>
 <br><br>
-<div *ngIf="!maxScorer" class="edit-form">
+<div class="maxScore" *ngIf="!maxScorer" class="edit-form" [hidden]='!enable'>
  
    
-    <label><strong>You are the first one to attempt this quize</strong></label>
+    <h2>You are the first one to attempt this quize</h2>
    
     
   </div> 
